unpackaged/main/default/objects/Enquiry_Options__c/fields/Last_Month_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Revenue__c</fullName>
    <formula>Nights_in_Last_Month__c  *  Net_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Month Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>