unpackaged/main/default/objects/Enquiry_Options__c/fields/Last_Month_Supplier_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Supplier_Revenue__c</fullName>
    <formula>Last_Month_Revenue__c  -  Last_Month_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Month Supplier Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>