unpackaged/main/default/objects/Enquiry_Options__c/fields/Last_Month_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Total_Revenue__c</fullName>
    <label>Last Month Total Revenue</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>