unpackaged/main/default/objects/Enquiry_Options__c/fields/Last_Year_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Bookings__c</fullName>
    <label>Last Year Bookings</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>