unpackaged/main/default/objects/Enquiry_Options__c/fields/Last_Year_Commission__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Commission__c</fullName>
    <formula>Booking_Revenue_Last_Year__c  *  Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>