unpackaged/main/default/objects/Enquiry_Options__c/fields/Last_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Revenue__c</fullName>
    <formula>Nights_Last_Year__c  *  Net_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>