unpackaged/main/default/objects/Enquiry_Options__c/fields/Last_Year_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Start_Date__c</fullName>
    <formula>addMonths(  Current_Year__c  ,-12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Start Date</label>
    <type>Date</type>
</CustomField>