unpackaged/main/default/objects/Enquiry_Options__c/fields/Last_Year_Supplier_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Supplier_Revenue__c</fullName>
    <formula>Last_Year_Revenue__c  -  Last_Year_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Supplier Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>