unpackaged/main/default/objects/Enquiry_Options__c/fields/Net_Rate__c.field-meta.xml
<CustomField>
    <fullName>Net_Rate__c</fullName>
    <label>Net Rate</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>