unpackaged/main/default/objects/Enquiry_Options__c/fields/Next_Month_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_Bookings__c</fullName>
    <label>Next Month Bookings</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>