unpackaged/main/default/objects/Enquiry_Options__c/fields/Next_Month_Commission__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_Commission__c</fullName>
    <formula>Next_Month_Revenue__c  *  Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Month Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>