unpackaged/main/default/objects/Enquiry_Options__c/fields/Next_Month_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_Revenue__c</fullName>
    <formula>Nights_in_Next_Month__c  *  Net_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Month Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>