unpackaged/main/default/objects/Enquiry_Options__c/fields/Next_Month_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_Total_Revenue__c</fullName>
    <label>Next Month Total Revenue</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>