unpackaged/main/default/objects/Enquiry_Options__c/fields/Nights_in_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Nights_in_Current_Month__c</fullName>
    <formula>Check_Out_Current_Month__c  -  Check_In_Current_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nights in Current Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>