unpackaged/main/default/objects/Enquiry_Options__c/fields/Nights_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Nights_Last_Year__c</fullName>
    <formula>Check_Out_Last_Year__c  -  Check_In_Last_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nights Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>