unpackaged/main/default/objects/Enquiry_Options__c/fields/Nights_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Nights_Remaining__c</fullName>
    <label>Nights Remaining</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>