unpackaged/main/default/objects/Enquiry_Options__c/fields/Option_Stage__c.field-meta.xml
<CustomField>
    <fullName>Option_Stage__c</fullName>
    <label>Option Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option</fullName>
                <default>true</default>
                <label>Option</label>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Closed Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>