unpackaged/main/default/objects/Enquiry_Options__c/fields/Options_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Options_This_Month__c</fullName>
    <formula>IF(AND(DATEVALUE(CreatedDate ) &gt;=  DATE(YEAR(TODAY()),MONTH(TODAY()),1), DATEVALUE(CreatedDate ) &lt;=  DATE(YEAR(TODAY()),MONTH(TODAY()), 31)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Options This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>