unpackaged/main/default/objects/Enquiry_Options__c/fields/Supplier_Buildings__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buildings__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier Buildings</label>
    <referenceTo>Supplier_Buildings__c</referenceTo>
    <relationshipLabel>Enquiry Options</relationshipLabel>
    <relationshipName>Enquiry_Options</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>