unpackaged/main/default/objects/Enquiry_Options__c/fields/Supplier_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contacts</label>
    <referenceTo>Supplier_Contacts__c</referenceTo>
    <relationshipLabel>Enquiry Options</relationshipLabel>
    <relationshipName>Enquiry_Options</relationshipName>
    <type>Lookup</type>
</CustomField>