unpackaged/main/default/objects/Enquiry_Options__c/fields/This_Month_Bookings__c.field-meta.xml
<CustomField>
    <fullName>This_Month_Bookings__c</fullName>
    <label>This Month Bookings</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>