unpackaged/main/default/objects/Enquiry_Options__c/fields/This_Year_Average_Commission__c.field-meta.xml
<CustomField>
    <fullName>This_Year_Average_Commission__c</fullName>
    <label>This Year Average Commission</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>