unpackaged/main/default/objects/Enquiry_Options__c/fields/This_Year_Room_Nights__c.field-meta.xml
<CustomField>
    <fullName>This_Year_Room_Nights__c</fullName>
    <label>This Year Room Nights</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>