unpackaged/main/default/objects/Enquiry_Options__c/fields/Total_Booking_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Cost__c</fullName>
    <formula>Number_of_Nights__c  *  Net_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Booking Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>