unpackaged/main/default/objects/Enquiry_Options__c/fields/Total_Revenue_to_SITU__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_to_SITU__c</fullName>
    <formula>Commission_Amount__c  -  Client_Commission_Amount__c  +  Booking_Fee_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue to SITU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>