unpackaged/main/default/objects/Enquiry_Options__c/fields/Total_Revenue_to_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_to_Supplier__c</fullName>
    <formula>Total_Booking_Cost__c  -  Commission_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue to Supplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>