unpackaged/main/default/objects/Enquiry_Options__c/fields/Total_Supplier_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Supplier_Revenue__c</fullName>
    <label>Total Supplier Revenue</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>