unpackaged/main/default/objects/Enquiry_Options__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Booking_Number__c</columns>
    <columns>Option_Stage__c</columns>
    <columns>Supplier_Accounts__c</columns>
    <columns>Supplier_Contacts__c</columns>
    <columns>Supplier_Buildings__c</columns>
    <columns>Check_In_Date__c</columns>
    <columns>Check_Out_Date__c</columns>
    <columns>Number_of_Nights__c</columns>
    <columns>Net_Rate__c</columns>
    <columns>Commission__c</columns>
    <columns>Total_Booking_Cost__c</columns>
    <columns>Total_Revenue_to_SITU__c</columns>
    <columns>Total_Revenue_to_Supplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>